--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -287,7 +287,10 @@
 
             .active{
                 transition: 1s;
-                background-color: #198754;
+                background-color: #000;
+                a{
+                    color: #fff !important;
+                }
                 
             }
             li {
@@ -310,10 +313,11 @@
         width: 100%;
         height: 560px;
         margin-top: 50px;
-
+        overflow: hidden;
         a {
 
             img {
+                transition: s;
                 width: 100%;
                 height: 400px;
             }
@@ -361,15 +365,6 @@
                 border: none;
                 margin-left: 167px;
             }
-        }
-    }
-
-    .show-more {
-        text-align: center;
-        margin-top: 30px;
-
-        button {
-            width: 150px;
         }
     }
 
@@ -454,14 +449,13 @@
             text-align: center;
             color: gray;
 
-            p {}
+        
         }
 
         .month {
             text-align: center;
             font-family: monospace;
 
-            h3 {}
         }
 
         .description {
@@ -713,7 +707,6 @@
 
     .image1 {
         overflow: hidden;
-
         img {
             width: 100%;
 
