--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -228,7 +228,10 @@
 }
 #products .category ul .active {
   transition: 1s;
-  background-color: #198754;
+  background-color: #000;
+}
+#products .category ul .active a {
+  color: #fff !important;
 }
 #products .category ul li {
   list-style: none;
@@ -247,8 +250,10 @@
   width: 100%;
   height: 560px;
   margin-top: 50px;
+  overflow: hidden;
 }
 #products .products a img {
+  transition: s;
   width: 100%;
   height: 400px;
 }
@@ -285,13 +290,6 @@
 #products .products .price-button button {
   border: none;
   margin-left: 167px;
-}
-#products .show-more {
-  text-align: center;
-  margin-top: 30px;
-}
-#products .show-more button {
-  width: 150px;
 }
 
 #our-services {
@@ -2933,6 +2931,160 @@
   margin-top: 13px;
 }
 
+#background .background-images {
+  height: 300px;
+  background-size: cover;
+  background-position: center;
+}
+#background .background-images h2 {
+  text-align: center;
+  color: white;
+  padding-top: 120px;
+  font-family: monospace;
+}
+
+#products .basket-products {
+  margin-top: 53px;
+  box-shadow: 2px 2px 6px 0 rgba(0, 0, 0, 0.1), 0 1px 1px 0 transparent, 0 1px 3px 0 rgba(0, 0, 0, 0.12) !important;
+  border-radius: 4px;
+  background: #fff;
+}
+#products .basket-products .table th {
+  height: 48px;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.54);
+  font-size: 14px;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-color: black;
+}
+#products tbody tr:nth-child(2) td:nth-child(6) a {
+  color: white !important;
+}
+#products tbody td {
+  text-align: center;
+  width: 203px;
+  height: 103px;
+  color: rgba(0, 0, 0, 0.87);
+  font-size: 1rem;
+  text-decoration: none;
+  font-weight: 500;
+}
+#products tbody td:nth-child(2) {
+  padding-top: 38px;
+}
+#products tbody td:nth-child(3) {
+  padding-top: 38px;
+  font-size: 21px;
+  font-weight: 500;
+}
+#products tbody td:nth-child(4) {
+  padding-top: 38px;
+}
+#products tbody td:nth-child(4) button {
+  padding: 0;
+  min-width: 0;
+  width: 40px;
+  height: 40px;
+  flex-shrink: 0;
+  line-height: 40px;
+  outline: none;
+  border: none;
+  background-color: white;
+  cursor: pointer;
+}
+#products tbody td:nth-child(4) button i {
+  color: rgba(0, 0, 0, 0.54);
+}
+#products tbody td:nth-child(6) {
+  padding-top: 38px;
+}
+#products tbody td:nth-child(5) {
+  padding-top: 38px;
+}
+#products tbody td a {
+  color: rgba(0, 0, 0, 0.87);
+  font-size: 1rem;
+  text-decoration: none;
+  font-weight: 500;
+}
+#products tbody td img {
+  padding-left: 47px;
+  height: 101px;
+}
+#products tbody td .shop {
+  margin-left: 19px;
+  margin-top: 13px;
+  text-align: center;
+  cursor: pointer;
+  width: 181px;
+  height: 49px;
+  background-color: #d14031;
+  border: none;
+  border-radius: 0;
+}
+#products tbody td .shop:hover {
+  background-color: rgb(172, 2, 2);
+  transition: 0.5s;
+}
+#products tbody td .shop a {
+  color: #fff;
+}
+#products tbody td input {
+  width: 80px;
+  text-align: center;
+  background-color: #eee;
+  height: 35px;
+  border: 1px solid #e5e5e5;
+  color: rgba(0, 0, 0, 0.54);
+}
+#products tbody .price {
+  padding-top: 38px;
+  font-size: 21px;
+  font-weight: 500;
+  color: red;
+}
+#products tbody .check {
+  position: relative;
+  bottom: 14px;
+  right: 15px;
+  background-color: #ef6c00;
+  border-color: #ef6c00;
+  text-align: center;
+  cursor: pointer;
+  width: 181px;
+  height: 49px;
+}
+#products .show-alert .alert {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#products .show-alert .alert .btn-red {
+  background-color: #f33927;
+  height: 32px;
+  border-radius: 18px;
+  padding: 5px 12px 6px 12px;
+  color: #fff;
+}
+#products .show-alert .button-shop {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#products .show-alert .button-shop button {
+  background-color: #d14031;
+  border: none;
+  border-radius: 0;
+}
+#products .show-alert .btn-orange {
+  display: block;
+  color: #fff;
+  margin-top: 20px;
+  height: 50px;
+  width: 179px;
+}
+
 #footer {
   margin-top: 150px;
   background-color: #282828;
@@ -3153,6 +3305,134 @@
 }
 #navbar .login-register .border {
   margin-top: 13px;
+}
+
+#background .background-images {
+  height: 300px;
+  background-size: cover;
+  background-position: center;
+}
+#background .background-images h2 {
+  text-align: center;
+  color: white;
+  padding-top: 120px;
+  font-family: monospace;
+}
+
+#products .wishlist-products {
+  margin-top: 53px;
+  box-shadow: 2px 2px 6px 0 rgba(0, 0, 0, 0.1), 0 1px 1px 0 transparent, 0 1px 3px 0 rgba(0, 0, 0, 0.12) !important;
+  border-radius: 4px;
+  background: #fff;
+}
+#products .wishlist-products .table tr {
+  display: flex;
+  justify-content: center;
+}
+#products .wishlist-products .table tr th {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom-width: 0px;
+  width: 314px !important;
+  text-align: center;
+  height: 60px;
+  padding: 0 24px;
+  color: rgba(0, 0, 0, 0.54);
+  font-size: 14px;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-color: black;
+}
+#products .wishlist-products .table tr th button {
+  background-color: #d14031;
+  border: none;
+  border-radius: 0;
+}
+#products .wishlist-products .table tr th button:hover {
+  background-color: rgb(172, 2, 2);
+  transition: 0.5s;
+}
+#products .wishlist-products .table tbody tr {
+  display: flex;
+  justify-content: center;
+}
+#products .wishlist-products .table tbody td {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 314px !important;
+  height: 103px;
+  color: rgba(0, 0, 0, 0.87);
+  font-size: 1rem;
+  text-decoration: none;
+  font-weight: 500;
+}
+#products .wishlist-products .table tbody td:nth-child(2) {
+  width: 300px;
+}
+#products .wishlist-products .table tbody td:nth-child(3) {
+  font-size: 21px;
+  font-weight: 500;
+}
+#products .wishlist-products .table tbody td a {
+  color: rgba(0, 0, 0, 0.87);
+  font-size: 1rem;
+  text-decoration: none;
+  font-weight: 500;
+}
+#products .wishlist-products .table tbody td img {
+  padding-left: 47px;
+  height: 101px;
+}
+#products .wishlist-products .table tbody td .btn {
+  margin-top: 13px;
+  text-align: center;
+  cursor: pointer;
+  width: 181px;
+  height: 49px;
+  background-color: #d14031;
+  border-radius: 0;
+  border: none;
+  margin-left: -445px;
+}
+#products .wishlist-products .table tbody td .btn:hover {
+  background-color: rgb(172, 2, 2);
+  transition: 0.5s;
+}
+#products .wishlist-products .table tbody td a {
+  color: #fff;
+  font-size: 1rem;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.show-alert .alert {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.show-alert .alert .btn-red {
+  background-color: #f33927;
+  height: 32px;
+  border-radius: 18px;
+  padding: 5px 12px 6px 12px;
+  color: #fff;
+}
+.show-alert .button-shop {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.show-alert .button-shop .btn-orange {
+  background-color: #ef6c00;
+  display: block;
+  border-color: #ef6c00;
+  color: #fff;
+  margin-top: 20px;
+  height: 50px;
+  width: 179px;
 }
 
 #footer {
@@ -4208,7 +4488,10 @@
 }
 #review-area .tab-menu ul .active {
   transition: 1s;
-  background-color: #198754;
+  background-color: #000;
+}
+#review-area .tab-menu ul .active a {
+  color: #fff !important;
 }
 #review-area .tab-menu ul li {
   list-style: none;
