--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -1,3 +1,10 @@
+// *,&::before,&::after{
+//     margin: 0;
+//     padding: 0;
+//     box-sizing: border-box;
+// }
+
+
 #slider {
     margin-top: 75px;
 
@@ -218,7 +225,55 @@
             button {
                 border: none;
                 margin-left: 167px;
+                background-color: #d14031;
+                border-radius: 0;
+                &:hover {
+                    background-color: rgb(172, 2, 2);
+                    transition: 0.5s;
+                }
             }
+
+            // .btn{
+            //     width: 8em;
+            //     height: 2.5em;
+            //     font-size: 1.25rem;
+            //     font-weight: 700;
+            //     position: relative;
+            //     border: 0;
+            //     cursor: pointer;
+            //     background-color: blue;
+            //     color: #5d4f0f;
+            //     transition: background
+            //     200ms ease-in-out;
+            //     color: #ffffff;
+
+            //     .border-container{
+            //         position: absolute;
+            //         width: 100%;
+            //         height: 100%;
+            //         inset: 0;
+            //     }
+
+            //     .border-line{
+            //         width: 100%;
+            //         height: 100%;
+            //         fill: transparent;
+            //         stroke: #5d4f0f;
+            //         stroke-width: 5px;
+            //         stroke-dasharray: 0 100;
+            //         transition: stroke-dasharray
+            //         750ms ease-in-out;
+            //     }
+
+            //     &:hover{
+            //         background-color: transparent;
+            //         color: #333333;
+
+            //         .border-line{
+            //             stroke-dasharray: 100 0;
+            //         }
+            //     }
+            // }
         }
     }
 
