--- a/assets/scss/_login.scss
+++ b/assets/scss/_login.scss
@@ -53,13 +53,24 @@
 
     .password-input {
         margin-top: 10px;
-
+        display: flex;
         input {
             width: 100%;
             height: 50px;
             border: 1px solid gray;
             outline: none;
             padding-left: 15px;
+        }
+        i{
+            color: black;
+            margin-left: -31px;
+            margin-top: 14px;
+            font-size: 20px;
+            cursor: pointer;
+            &:hover{
+                color:rgb(172, 2, 2) ;
+                transition: 0.5s;
+            }
         }
     }
 
