--- a/assets/scss/_shop.scss
+++ b/assets/scss/_shop.scss
@@ -94,6 +94,12 @@
             button {
                 border: none;
                 margin-left: 167px;
+                background-color: #d14031;
+                border-radius: 0;
+                &:hover {
+                    background-color: rgb(172, 2, 2);
+                    transition: 0.5s;
+                }
             }
         }
     }
@@ -173,80 +179,103 @@
         }
 
         .product-price {
-            font-family: 'Poppins', sans-serif;
+            font-family: "Crimson Text";
+            font-weight: 700;
+            letter-spacing: .1em;
+        }
 
-            .price-title {
-                padding: 2px 20px;
+        .price-title {
+            padding: 2px 20px;
 
-                h3 {
-                    font-size: 18px;
-                    font-weight: 600;
-                    text-transform: capitalize;
+            h3 {
+                font-size: 16px;
+                font-weight: 700;
+                letter-spacing: .1em;
+                font-family: "Crimson Text";
+            }
+        }
+
+        .price-filter {
+
+            .card {
+                border: none;
+                padding: 0 20px 20px 20px;
+            }
+
+            h4 {
+                color: #000;
+                margin-bottom: 20px;
+                text-align: center;
+                font-weight: 600;
+            }
+
+            .price-content {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                // margin-right: 110px;
+                margin-top: 10px;
+
+                .filter-button {
+                    button {
+                        border: none;
+                        background-color: #d14031;
+                        height: 40px;
+                        width: 90px;
+                        color: white;
+
+                        &:hover {
+                            background-color: rgb(172, 2, 2);
+                            transition: 0.5s;
+                        }
+                    }
+
                 }
             }
 
-            .price-filter {
+            label {
+                font-size: 12px;
+                font-weight: 500;
+            }
 
-                .card {
-                    border-radius: 5px;
-                    padding: 0 20px 20px 20px;
-                }
+            p {
+                font-size: 16px;
+                font-weight: 600;
+            }
 
-                h4 {
-                    color: #000;
-                    margin-bottom: 20px;
-                    text-align: center;
-                    font-weight: 600;
-                }
+            .range-slider {
+                position: relative;
+                margin: 15px 0 30px 0;
 
-                .price-content {
-                    display: flex;
-                    align-items: center;
-                    justify-content: space-between;
-                    margin: 0 30px;
-                }
+            }
 
-                label {
-                    font-size: 12px;
-                    font-weight: 500;
-                }
+            input[type=range] {
+                width: 100%;
+                background: transparent;
+                position: absolute;
+                left: 0;
+            }
 
-                p {
-                    font-size: 16px;
-                    font-weight: 600;
-                }
+            input[type=range]::-webkit-slider-thumb {
+                -webkit-appearance: none;
+                height: 15px;
+                width: 15px;
+                border-radius: 50%;
+                background: #36b37e;
 
-                .range-slider {
-                    position: relative;
-                    margin: 15px 0 30px 0;
-                }
+                cursor: pointer;
+                margin-top: -5px;
+                position: relative;
+                z-index: 1;
+            }
 
-                input[type=range] {
-                    width: 100%;
-                    background: transparent;
-                    position: absolute;
-                    left: 0;
-                }
 
-                input[type=range]::-webkit-slider-thumb {
-                    -webkit-appearance: none;
-                    height: 15px;
-                    width: 15px;
-                    border-radius: 50%;
-                    background: #36b37e;
-                    cursor: pointer;
-                    margin-top: -5px;
-                    position: relative;
-                    z-index: 1;
-                }
-
-                input[type=range]::-webkit-slider-runnable-track {
-                    width: 100%;
-                    height: 5px;
-                    background: #e8e8e8;
-                    border-radius: 3px;
-                    border: none;
-                }
+            input[type=range]::-webkit-slider-runnable-track {
+                width: 100%;
+                height: 5px;
+                background: #d14031;
+                border-radius: 3px;
+                border: none;
             }
         }
 
