Add New Section

--- a/assets/scss/_productdetail.scss
+++ b/assets/scss/_productdetail.scss
@@ -265,6 +265,13 @@
             font-family: auto;
             font-weight: bold;
         }
+
+        .stars{
+            i{
+                cursor: pointer;
+                color: gray;
+            }
+        }
         input{
             width: 50%;
             height: 50px;
