--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -142,6 +142,9 @@
             margin-top: 13px;
         }
     }
+
+
+
 }
 
 #footer {
@@ -291,4 +294,74 @@
             }
         }
     }
+}
+
+
+#navbar-phone {
+    .nav {
+        display: flex;
+        justify-content: space-between;
+        .logo-img {
+            margin-top: 10px;
+            margin-left: 10px;
+            img {
+                width: 50px;
+                height: 50px;
+            }
+        }
+        .icons{
+            margin-top: 20px;
+            margin-left: -30px;
+            ul{
+                gap: 15px;
+                display: flex;
+                li{
+                    list-style: none;
+                    a{
+                        text-decoration: none;
+                        i{
+                            color: black;
+                            cursor: pointer;
+                        }
+                    }
+                    i{
+                        color: black;
+                        cursor: pointer;
+                    }
+                }
+            }
+            
+        }
+        .hamburger-icon{
+            margin-top: 20px;
+            i{
+
+            }
+        }
+        
+    }
+    .search-input{
+        input{
+            border: none;
+            outline: none;
+        }
+    }
+}
+
+
+@media (max-width:850px) {
+    #navbar {
+        .logo-pages {
+            .logo {
+                width: 20px;
+                height: 20px;
+
+                img {
+                    width: 70px;
+                    margin-top: 40px;
+                }
+            }
+        }
+    }
+
 }
