--- a/assets/scss/_productdetail.scss
+++ b/assets/scss/_productdetail.scss
@@ -21,6 +21,7 @@
         position: sticky;
         top: 50px !important;
         left: 0;
+
         img {
             width: 100%;
         }
@@ -164,36 +165,32 @@
         }
 
         .author-comment {
-            margin-top: 50px;
             background-color: #fbf9f6;
-            height: 250px;
+            padding: 30px 40px;
+            margin-top: 30px;
 
             .starts {
                 display: flex;
                 gap: 5px;
-                padding-top: 40px;
-                margin-left: 50px;
             }
 
-            .comment{
-                p{
+            .comment {
+                p {
                     color: gray;
                     font-family: auto;
-                    width: 680px;
-                    margin-left: 50px;
                     margin-top: 20px;
                     font-size: 18px;
                 }
             }
 
-            .logo-name{
+            .logo-name {
                 display: flex;
-                margin-left: 50px;
                 padding-top: 10px;
-           
-                .names{
+
+                .names {
                     margin-left: 10px;
-                    p{
+
+                    p {
                         font-family: auto;
                         font-size: 18px;
                     }
@@ -203,22 +200,25 @@
     }
 }
 
-#review-area{
+#review-area {
     .tab-menu {
         margin-top: 100px;
+
         ul {
             display: flex;
             gap: 10px;
             justify-content: center;
 
-            .active{
+            .active {
                 transition: 1s;
                 background-color: #000;
-                a{
+
+                a {
                     color: #fff !important;
                 }
-                
+
             }
+
             li {
                 list-style: none;
                 border: 1px solid black;
@@ -227,6 +227,7 @@
                 height: 40px;
                 padding-top: 7px;
                 cursor: pointer;
+
                 a {
                     text-decoration: none;
                     color: black;
@@ -234,45 +235,48 @@
             }
         }
 
-        
+
     }
 
-    .description{
+    .description {
         margin-top: 20px;
-        p{
+
+        p {
             text-align: center;
             font-family: auto;
             color: gray;
         }
     }
 
-  
+
 
     .filterDiv {
-        display: none ;
+        display: none;
     }
-    
+
     .show {
         display: block;
     }
 
 
-    .user-comment{
+    .user-comment {
         margin-top: 20px;
         text-align: center;
-        p{
+
+        p {
             font-size: 20px;
             font-family: auto;
             font-weight: bold;
         }
 
-        .stars{
-            i{
+        .stars {
+            i {
                 cursor: pointer;
                 color: gray;
             }
         }
-        input{
+
+        input {
             width: 50%;
             height: 50px;
             border: 1px solid rgba(128, 128, 128, 0.2117647059);
@@ -280,7 +284,7 @@
             outline: none;
         }
 
-        textarea{
+        textarea {
             width: 50%;
             border: 1px solid rgba(128, 128, 128, 0.2117647059);
             padding-left: 15px;
@@ -290,7 +294,7 @@
 
         .submit-button {
             margin-top: 20px;
-    
+
             button {
                 width: 130px;
                 height: 50px;
@@ -298,7 +302,7 @@
                 color: white;
                 border: none;
                 font-family: initial;
-    
+
                 &:hover {
                     background-color: rgb(172, 2, 2);
                     transition: 0.5s;
@@ -308,56 +312,65 @@
     }
 }
 
-#related-products{
+#related-products {
     margin-top: 100px;
-    .related-products-word{
-        h2{
+
+    .related-products-word {
+        h2 {
             font-family: auto;
         }
     }
 
-    .related-products{
+    .related-products {
         margin-top: 50px;
-        .image{
-            img{
+
+        .image {
+            img {
                 cursor: pointer;
                 width: 100%;
             }
         }
-        .author-name{
+
+        .author-name {
             margin-top: 10px;
-            p{
+
+            p {
                 color: gray;
                 font-family: auto;
                 font-size: 18px;
                 cursor: pointer;
-                &:hover{
-                    color: rgb(241, 6, 6);
-                    transition: 1s;
-                }
-            }
-        }
-        .book-name{
-            margin-top: -10px;
-            span{
-                font-family: auto;
-                font-weight: bold;
-                font-size: 18px;
-                cursor: pointer;
-                &:hover{
+
+                &:hover {
                     color: rgb(241, 6, 6);
                     transition: 1s;
                 }
             }
         }
 
-        .book-price{
+        .book-name {
+            margin-top: -10px;
+
+            span {
+                font-family: auto;
+                font-weight: bold;
+                font-size: 18px;
+                cursor: pointer;
+
+                &:hover {
+                    color: rgb(241, 6, 6);
+                    transition: 1s;
+                }
+            }
+        }
+
+        .book-price {
             margin-top: 5px;
-            p{
+
+            p {
                 color: gray;
                 font-family: auto;
             }
         }
     }
-    
+
 }
